# unique_ptr_example

./: .gitignore  CMakeLists.txt  README.md
include/: Circle.h  Shape.h  Square.h  log.h
src/: Circle.cpp  Shape.cpp  Square.cpp  log.cpp  main.cpp
